syntax = "proto3";

package xyz.block.ftl.v1;

import "xyz/block/ftl/v1/event.proto";
import "xyz/block/ftl/v1/ftl.proto";

option go_package = "github.com/TBD54566975/ftl/backend/protos/xyz/block/ftl/v1;ftlv1";
option java_multiple_files = true;

message GetTimelineRequest {
  string deployment_key = 1;
  optional int64 since_id = 2;
  optional int32 limit = 3;
  repeated ftl.v1.EventType event_types = 4;
}

message GetTimelineResponse {
  repeated ftl.v1.Event events = 1;
}

message DeleteOldEventsRequest {
  ftl.v1.EventType event_type = 1;
  int64 age_seconds = 2;
}

message DeleteOldEventsResponse {
  int64 deleted_count = 1;
}

service TimelineService {
  // Ping service for readiness
  rpc Ping(PingRequest) returns (PingResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // Get timeline events, optionally filtered by type and time
  rpc GetTimeline(GetTimelineRequest) returns (GetTimelineResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // Delete old events of a specific type
  rpc DeleteOldEvents(DeleteOldEventsRequest) returns (DeleteOldEventsResponse) {}
}
